src/test/ui/issue-33464.stderr
error[E0432]: unresolved import `abc`
  --> $DIR/issue-33464.rs:13:5
   |
LL | use abc::one_el;
   |     ^^^ Maybe a missing `extern crate abc;`?

error[E0432]: unresolved import `abc`
  --> $DIR/issue-33464.rs:15:5
   |
LL | use abc::{a, bbb, cccccc};
   |     ^^^ Maybe a missing `extern crate abc;`?

error[E0432]: unresolved import `a_very_long_name`
  --> $DIR/issue-33464.rs:17:5
   |
LL | use a_very_long_name::{el, el2};
   |     ^^^^^^^^^^^^^^^^ Maybe a missing `extern crate a_very_long_name;`?

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
